--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -302,6 +302,24 @@
                 app:layout_constraintEnd_toStartOf="@+id/vdivider7"
                 app:layout_constraintStart_toEndOf="@+id/vdivider6"
                 app:layout_constraintTop_toBottomOf="@+id/divider80" />
+            
+<!--Control Bars-->
+            <ProgressBar
+                android:id="@+id/fanProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                app:layout_constraintBottom_toTopOf="@+id/divider50"
+                app:layout_constraintEnd_toStartOf="@+id/vdivider5"
+                app:layout_constraintStart_toEndOf="@+id/vdivider4"
+                app:layout_constraintTop_toBottomOf="@+id/divider30"
+                android:rotation="-90" />
+            <ProgressBar
+                android:id="@+id/tempProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                app:layout_constraintBottom_toTopOf="@+id/divider50"
+                app:layout_constraintEnd_toStartOf="@+id/vdivider8"
+                app:layout_constraintStart_toEndOf="@+id/vdivider7"
+                app:layout_constraintTop_toBottomOf="@+id/divider30"
+                android:rotation="-90" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
